# first_ros2_pkg

./: README.md
cpp/: CMakeLists.txt  first_sub_node.cpp  package.xml
cpp/launch/: pub_sub.launch.py
python/: first_pub_node.py  package.xml  setup.cfg  setup.py
